# simplesets

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets_template.json  README.md  vcpkg-configuration.json  vcpkg.json
data/: SOURCES.md  mills.txt  simplesets-mills.json  simplesets-nyc.json
frontend/: CMakeLists.txt
frontend/colors/: colors.h
frontend/filtration_demo/: CMakeLists.txt  filtration_demo.cpp  filtration_demo.h
frontend/simplesets_cl/: CMakeLists.txt  simplesets_cl.cpp
frontend/simplesets_gui/: CMakeLists.txt  simplesets_gui.cpp  simplesets_gui.h
test/: CMakeLists.txt  collinear_island.cpp  partition_algorithm.cpp  poly_line_gon_intersection.cpp
wasm_frontend/: CMakeLists.txt  simplesets.cpp
